<resources>
    <string name="app_name">Harvbox</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_settings">Settings</string>
    <string name="network_error_desc">Unfortunately, a network error occurred. Please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="fragment_settings_menu_about_app">About app</string>
    <string name="fragment_settings_menu_light_settings">Light settings</string>
    <string name="fragment_settings_menu_app_settings">App settings</string>

    <!--AppSettings-->
    <string name="app_settings_realtime_db_title">Realtime database (refresh cooldown)</string>
    <string name="app_settings_realtime_db_desc">How often do you want refresh your data? Put value in miliseconds.</string>
    <string name="app_settings_elastic_title">Elastic search (refresh cooldown)</string>
    <string name="app_settings_elastic_desc">How often do you want save stats in analytic database? Put value in miliseconds.</string>
    <string name="app_settings_photo_title">Photo (refresh cooldown)</string>
    <string name="app_settings_photo_desc">How often do you want take a new photo? Put value in miliseconds.</string>
    <string name="ok">OK</string>
    <string name="request_photo">Request Photo</string>
    <string name="last_update_date">Last update date %s</string>
    <string name="light_in_not_required_state">This light is not in required state!</string>
    <string name="new_trigger">New trigger</string>
    <string name="about_author">This application is created by Przemyslaw Materna for university purposes.</string>


</resources>
