<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/settings_menu_container"
        android:layout_width="@dimen/settings_menu_width"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_settings_menu_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_menu_height"
            android:gravity="center"
            android:text="@string/fragment_settings_menu_app_settings" />

        <TextView
            android:id="@+id/fragment_settings_menu_light"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_menu_height"
            android:gravity="center"
            android:text="@string/fragment_settings_menu_light_settings" />

        <TextView
            android:id="@+id/fragment_settings_menu_about_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_menu_height"
            android:gravity="center"
            android:text="@string/fragment_settings_menu_about_app" />

    </LinearLayout>

    <ViewAnimator
        android:id="@+id/fragment_settings_content_animator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/settings_menu_container"
        android:animateFirstView="true"
        android:padding="4dp">

        <include
            layout="@layout/layout_app_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include
            layout="@layout/layout_light_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include
            layout="@layout/layout_about_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </ViewAnimator>

</RelativeLayout>